# kocli

./: .gitignore  Cargo.toml
learn_weather_api/: note.txt
resources/: area_code.json
settings/: required_settings.toml
src/: features.rs  main.rs
src/features/: rand_img.rs  remind.rs
src/features/convert_path/: convert.rs
src/features/rand_img/: file_rename.rs  shuffle.rs
src/features/remind/: audio.rs  play_sound.rs  time_mode.rs
src/features/utils/: config_loader.rs
src/features/weather_forecast/: forecast.rs  weather.rs
tools/: fetch_area_code.py
